# liblwm2m

./: .gitignore  README  example.lua
client/: CMakeLists.txt  lwm2mclient.c
core/: internals.h  liblwm2m.c  liblwm2m.h  lua_liblwm2m.c  lua_object.c  management.c  objects.c  observe.c  packet.c  registration.c  tlv.c  transaction.c  uri.c  utils.c
core/er-coap-13/: er-coap-13.c
server/: lwm2mserver.c
tests/client/: lwm2mclient.c  object_device.c  test_object.c
tests/server/: lwm2mserver.c
